Popisek na obr8zku

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,14 @@
       </div>
     </section>
 
-    <section id="gallery" class="gallery"></section>
+    <section id="gallery" class="gallery">
+      <div id="gallery__caption" class="gallery__caption">
+        <p>
+          Naše moderní a stylová kavárna nabízí příjemné posezení a odpočinek u
+          dobré kávy.
+        </p>
+      </div>
+    </section>
 
     <section>
       <div id="contacts" class="container">
