Nápoj jako komponenta

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
         </p>
 
         <div class="drinks-list">
-          <div class="drink">
+          <!-- <div class="drink">
             <div class="drink__product">
               <div class="drink__cup">
                 <img
@@ -49,33 +49,33 @@
               </div>
               <div class="drink__info">
                 <h3>Cappuccino</h3>
-                <!-- <div class="layer">
+                <div class="layer">
                   <div
                     class="layer__color"
                     style="background-color: #feeeca"
                   ></div>
-                  <div class="layer__label">mléčná pěna</div> 
+                  <div class="layer__label">mléčná pěna</div>
                 </div>
                 <div class="layer">
-                 <div
+                  <div
                     class="layer__color"
                     style="background-color: #fed7b0"
                   ></div>
-                  <div class="layer__label">teplé mléko</div> 
+                  <div class="layer__label">teplé mléko</div>
                 </div>
                 <div class="layer">
-                   <div
+                  <div
                     class="layer__color"
                     style="background-color: #613916"
                   ></div>
-                  <div class="layer__label">espresso</div> 
-                </div> -->
+                  <div class="layer__label">espresso</div>
+                </div>
               </div>
             </div>
             <div class="drink__controls">
               <button class="order-btn">Objednat</button>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
